# drone-challenge

./: .gitignore  LICENSE  README.md
doc/: README.md  new_simulator.md
drone_matlab/R18a/: drone_control_R18a.slx  drone_control_tut3_R18a.slx
drone_matlab/R18b/: drone_control_R18b.slx  drone_control_tut3_R18b.slx
drone_matlab/R19a/: drone_control_R19a.slx  drone_control_tut3_R19a.slx
drone_matlab/R19b/: LEEME.TXT  drone_control_R19b.slx  drone_control_R19b.slx.original  drone_control_tut3_R19b.slx  frames_display.m  game_monitor.slx  game_monitor_func.m
drone_matlab/R20b/: drone_control_tut3_R20b.slx
drone_matlab/R22a/: LEEME.TXT  drone_RADAR.m  drone_buses.mat  drone_control_R22a.slx  drone_control_R22a.slx.r2020b  drone_control_tut3_R22a.slx  drone_control_tut3_R22a_1.slx  drone_control_tut3_R22a_2.slx  escenario1.fig  pruebajesus.asv  pruebajesus.m  round1.fig  untitled.m  untitled2.asv
drone_ros/launch/: ros_ip_set.sh  ros_ip_set.sh~~
drone_ros/melodic/: package.xml
drone_ros/melodic/launch/: round1.sh
drone_ros/melodic/plugins/: CMakeLists.txt
drone_ros/melodic/plugins/build_old/: CTestTestfile.cmake
drone_ros/melodic/plugins/build_old/catkin_generated/: generate_cached_setup.py
drone_ros/melodic/plugins/build_old/devel/: .catkin
drone_ros/melodic/plugins/build_old/gtest/: Makefile
drone_ros/melodic/worlds/: round1.world
drone_ros/plugins/: model_push.cc
drone_ros/worlds/: round1.world
models/base_drone/: model.config  model.sdf
models/drone/: model.config  model.sdf
models/floor/: model.config  model.sdf
(+41 files in other folders)
