<package>
  <name>drone_ros</name>
  <version>2.0.0</version>
  <description>Gazebo launchers and worlds for Drone simulation</description>
  <maintainer email="rafael.casado@uclm.es">Rafael Casado</maintainer>
  <author email="rafael.casado@uclm.es">Rafael Casado</author>
  <license>GPLv3</license>
  
    <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/worlds"/> 
  </export>
  
  <run_depend>create_gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
</package>
